--- a/config/overlays/baremetal/k0s.Cluster.yaml
+++ b/config/overlays/baremetal/k0s.Cluster.yaml
@@ -15,6 +15,8 @@ spec:
               url: https://metallb.github.io/metallb
             - name: traefik
               url: https://traefik.github.io/charts
+            - name: fluxcd-community
+              url: https://fluxcd-community.github.io/helm-charts
             charts:
             - name: openebs
               chartname: openebs-internal/openebs
@@ -26,6 +28,11 @@ spec:
                   hostpathClass:
                     enabled: true
                     isDefaultClass: true
+            - name: flux2
+              chartname: fluxcd-community/flux2
+              order: 3
+              version: "2.12.4"
+              namespace: flux-system
             - name: metallb
               chartname: metallb/metallb
               namespace: metallb-system
