--- a/flux/kustomization.yaml
+++ b/flux/kustomization.yaml
@@ -2,5 +2,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: flux-system
 resources:
-- homelab.source.yaml
-- metallb-system.kustomization.yaml
+- homelab.gitrepository.yaml
+- metallb.kustomization.yaml
