--- a/flux/kustomization.yaml
+++ b/flux/kustomization.yaml
@@ -5,3 +5,4 @@ resources:
 - homelab.gitrepository.yaml
 - metallb.kustomization.yaml
 - meshcentral.kustomization.yaml
+- monitoring.kustomization.yaml
