--- a/flux/kustomization.yaml
+++ b/flux/kustomization.yaml
@@ -6,3 +6,4 @@ resources:
 - metallb.kustomization.yaml
 - meshcentral.kustomization.yaml
 - monitoring.kustomization.yaml
+- netbootxyz.kustomization.yaml
