--- a/netbootxyz/base/server/server-udp.service.yaml
+++ b/netbootxyz/base/server/server-udp.service.yaml
@@ -2,10 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: server-udp
-  annotations:
-    metallb.universe.tf/allow-shared-ip: "server"
 spec:
-  type: LoadBalancer
+  type: NodePort
   ports:
   - name: tftp
     port: 69
