--- a/k0s/k0s.Cluster.patch.yaml
+++ b/k0s/k0s.Cluster.patch.yaml
@@ -13,6 +13,12 @@ spec:
               url: https://openebs.github.io/charts
             - name: metallb
               url: https://metallb.github.io/metallb
+            - name: jetstack
+              url: https://charts.jetstack.io
+            - name: nfd
+              url: https://kubernetes-sigs.github.io/node-feature-discovery/charts
+            - name: intel
+              url: https://intel.github.io/helm-charts/
             - name: traefik
               url: https://traefik.github.io/charts
             - name: fluxcd-community
@@ -32,21 +38,43 @@ spec:
                     isDefaultClass: true
             - name: flux2
               chartname: fluxcd-community/flux2
-              order: 3
+              order: 2
               version: "2.12.4"
               namespace: flux-system
             - name: metallb
               chartname: metallb/metallb
               namespace: metallb-system
-              order: 2
+              order: 3
             - name: traefik
               chartname: traefik/traefik
-              order: 3
+              order: 4
               version: "20.5.3"
               namespace: traefik-system
+            - name: cert-manager
+              chartname: jetstack/cert-manager
+              order: 5
+              namespace: cert-manager
+              version: "v1.14.2"
+              values: |
+                installCRDs: true
+            - name: nfd
+              chartname: nfd/node-feature-discovery
+              order: 6
+              namespace: node-feature-discovery
+              version: "0.15.1"
+            - name: dp-operator
+              chartname: intel/intel-device-plugins-operator
+              order: 7
+              namespace: inteldeviceplugins-system
+            - name: gpu
+              chartname: intel/intel-device-plugins-gpu
+              order: 8
+              namespace: inteldeviceplugins-system
+              values: |
+                nodeFeatureRule: true
             - name: kube-prometheus-stack
               chartname: prometheus-community/kube-prometheus-stack
-              order: 4
+              order: 9
               namespace: monitoring
               values: |
                 alertmanager:
