--- a/.mise.toml
+++ b/.mise.toml
@@ -8,16 +8,17 @@ kubectl = "latest"
 
 [env]
 CONTAINER_ENGINE="docker"
-BUTANE_FILES_DIR=""
+CACHE_DIR="{{ [config_root, '.cache'] | join_path }}"
+DATA_DIR="{{ [env.CACHE_DIR, 'data'] | join_path }}"
 K0SCTL_USERNAME="admin"
 K0SCTL_IDENTITY_PATH="{{ [config_root, '.ssh', 'id_rsa'] | join_path }}"
 K0SCTL_BASE_CONFIG_PATH="{{ [config_root, 'k0s', 'k0s.Cluster.yaml'] | join_path }}"
-K0SCTL_CONFIG_OUTPUT="{{ [config_root, '.cache', 'k0sctl', 'config.yaml'] | join_path }}"
-K0SCTL_KUBECONFIG="{{ [config_root, '.cache', '.kube', 'config'] | join_path }}"
+K0SCTL_CONFIG_OUTPUT="{{ [env.CACHE_DIR, 'k0sctl', 'config.yaml'] | join_path }}"
+K0SCTL_KUBECONFIG="{{ [env.CACHE_DIR, '.kube', 'config'] | join_path }}"
 K0SCTL_HOSTS=""
 KUBECONFIG="{{ env.K0SCTL_KUBECONFIG }}"
 K0S_BUTANE_PATH="{{ [config_root, 'ignition', 'k0s.bu'] | join_path }}"
-K0S_IGNITION_PATH="{{ [config_root, '.cache', 'ignition', 'k0s.ign'] | join_path }}"
+K0S_IGNITION_PATH="{{ [env.CACHE_DIR, 'ignition', 'k0s.ign'] | join_path }}"
 COREOS_DEST_DEV="/dev/sda"
 COREOS_ISO_PATH=""
 COREOS_ISO_OUTPUT="out.iso"
@@ -27,12 +28,12 @@ COREOS_DOWNLOAD_URL="https://builds.coreos.fedoraproject.org/prod/streams/stable
 COREOS_KERNEL_URL="{{ env.COREOS_DOWNLOAD_URL }}/fedora-coreos-{{ env.COREOS_VERSION }}-live-kernel-{{ env.TARGET_SYSTEM_ARCH }}"
 COREOS_INITRAMFS_URL="{{ env.COREOS_DOWNLOAD_URL }}/fedora-coreos-{{ env.COREOS_VERSION }}-live-initramfs.{{ env.TARGET_SYSTEM_ARCH }}.img"
 COREOS_ROOTFS_URL="{{ env.COREOS_DOWNLOAD_URL }}/fedora-coreos-{{ env.COREOS_VERSION }}-live-rootfs.{{ env.TARGET_SYSTEM_ARCH }}.img"
-PXE_ROOT_DIR="{{ [config_root, 'pxe', 'os'] | join_path }}"
+PXE_ROOT_DIR="{{ [env.DATA_DIR, 'os'] | join_path }}"
 PXE_COREOS_DIR="{{ [env.PXE_ROOT_DIR, 'fedora', 'coreos', env.COREOS_VERSION, env.TARGET_SYSTEM_ARCH] | join_path }}"
-K0S_KERNEL_OUTPUT="{{ [ env.PXE_COREOS_DIR, 'k0s-live-kernel'] | join_path }}"
-K0S_INITRAMFS_OUTPUT="{{ [ env.PXE_COREOS_DIR, 'k0s-live-initramfs.img'] | join_path }}"
-K0S_ROOTFS_OUTPUT="{{ [ env.PXE_COREOS_DIR, 'k0s-live-rootfs.img'] | join_path }}"
-PXE_IGNITION_PATH="{{ [config_root, '.cache', 'ignition', 'pxe.ign'] | join_path }}"
+K0S_KERNEL_OUTPUT="{{ [env.PXE_COREOS_DIR, 'k0s-live-kernel'] | join_path }}"
+K0S_INITRAMFS_OUTPUT="{{ [env.PXE_COREOS_DIR, 'k0s-live-initramfs.img'] | join_path }}"
+K0S_ROOTFS_OUTPUT="{{ [env.PXE_COREOS_DIR, 'k0s-live-rootfs.img'] | join_path }}"
+PXE_IGNITION_PATH="{{ [env.CACHE_DIR, 'ignition', 'pxe.ign'] | join_path }}"
 PXE_BUTANE_PATH="{{ [config_root, 'ignition', 'pxe.bu'] | join_path }}"
 
 [tasks."k0s:apply"]
@@ -70,14 +71,7 @@ run = """
     """
 
 [tasks."apply:pxe"]
-run="""
-    #!/usr/bin/env bash
-
-    POD=$(kubectl get -n pxe po -l app.kubernetes.io/component=web -o name | head -n1 | cut -f2 -d'/')
-    kubectl -n pxe cp ${PXE_ROOT_DIR}.tar.gz ${POD}:/opt/app-root/src
-    kubectl exec -n pxe ${POD} -- tar -C /opt/app-root/src -xvf /opt/app-root/src/$(basename ${PXE_ROOT_DIR}).tar.gz
-    kubectl exec -n pxe ${POD} -- rm /opt/app-root/src/$(basename ${PXE_ROOT_DIR}).tar.gz
-"""
+run="scp -i ${K0SCTL_IDENTITY_PATH} -Cr ${PXE_ROOT_DIR} ${K0SCTL_USERNAME}@pxe:/srv/www"
 depends = [ "k0s:generate:pxe" ]
 
 [tasks."k0s:generate:pxe"]
@@ -125,10 +119,11 @@ run = """
     mkdir -p $(dirname ${K0S_IGNITION_PATH})
     internal \
     --pretty --strict \
-    --files-dir ${BUTANE_FILES_DIR} \
+    --files-dir ${DATA_DIR} \
     < ${K0S_BUTANE_PATH} \
     > ${K0S_IGNITION_PATH}
     """
+depends = ["common:pre-gen:ignition"]
 
 [tasks."pxe:generate:ignition"]
 run = """
@@ -136,7 +131,23 @@ run = """
     mkdir -p $(dirname ${PXE_IGNITION_PATH})
     internal \
     --pretty --strict \
-    --files-dir ${BUTANE_FILES_DIR} \
+    --files-dir ${DATA_DIR} \
     < ${PXE_BUTANE_PATH} \
     > ${PXE_IGNITION_PATH}
     """
+depends = ["common:pre-gen:ignition"]
+
+[tasks."common:pre-gen:ignition"]
+run = """
+    mkdir -p ${DATA_DIR}
+    cp ${K0SCTL_IDENTITY_PATH}.pub ${DATA_DIR}/labadm.pub
+    cp -R ignition/overlays/ ${DATA_DIR}
+
+    ${CONTAINER_ENGINE} build -q -t ipxe -f - << EOF
+        FROM registry.fedoraproject.org/fedora
+        RUN dnf install -y ipxe-bootimgs-x86 ipxe-bootimgs-aarch64
+        VOLUME /out
+        CMD ["sh", "-c", "cp /usr/share/ipxe/{undionly.kpxe,ipxe-x86_64.efi,ipxe-i386.efi} /out"]
+EOF
+    ${CONTAINER_ENGINE} run --rm -v ${DATA_DIR}/overlays/pxe/var/lib/tftpboot:/out:z localhost/ipxe
+"""
