--- a/meshcentral/base/web/deployment.yaml
+++ b/meshcentral/base/web/deployment.yaml
@@ -18,12 +18,31 @@ spec:
         resources:
           limits:
             memory: "256Mi"
-            cpu: "1000m"
+            cpu: "500m"
         ports:
         - name: https
           containerPort: 443
         - name: bio
           containerPort: 4433
+        livenessProbe:
+          httpGet:
+            path: /health.ashx
+            scheme: HTTPS
+            port: https
+          initialDelaySeconds: 3
+        readinessProbe:
+          httpGet:
+            path: /health.ashx
+            scheme: HTTPS
+            port: https
+          initialDelaySeconds: 3
+        securityContext:
+          runAsNonRoot: true
+          readOnlyRootFilesystem: true
+          allowPrivilegeEscalation: false
+          capabilities:
+            drop:
+            - ALL
       volumes:
       - name: config
         configMap:
@@ -31,3 +50,7 @@ spec:
       - name: data
         persistentVolumeClaim:
           claimName: web
+      securityContext:
+        runAsNonRoot: true
+        seccompProfile:
+          type: RuntimeDefault
