--- a/meshcentral/base/web/service.yaml
+++ b/meshcentral/base/web/service.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: web
+  annotations:
+    metallb.universe.tf/loadBalancerIPs: 10.0.0.201
 spec:
   type: LoadBalancer
   ports:
