--- a/meshcentral/base/web/deployment.yaml
+++ b/meshcentral/base/web/deployment.yaml
@@ -42,6 +42,8 @@ spec:
           capabilities:
             drop:
             - ALL
+            add:
+            - NET_BIND_SERVICE
       volumes:
       - name: config
         configMap:
