--- a/monitoring/grafana.ingressroute.yaml
+++ b/monitoring/grafana.ingressroute.yaml
@@ -4,10 +4,12 @@ metadata:
   name: grafana
 spec:
   entryPoints:
-  - web
+  - websecure
   routes:
   - match: Host(`grafana.ajphome.com`)
     kind: Rule
     services:
     - name: kube-prometheus-stack-grafana
       port: 80
+  tls:
+    secretName: grafana-tls
