--- a/monitoring/kustomization.yaml
+++ b/monitoring/kustomization.yaml
@@ -1,5 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+- grafana-tls.Certificate.yaml
 - grafana.ingressroute.yaml
 - prometheus.ingressroute.yaml
