--- a/monitoring/prometheus.ingressroute.yaml
+++ b/monitoring/prometheus.ingressroute.yaml
@@ -4,10 +4,12 @@ metadata:
   name: prometheus
 spec:
   entryPoints:
-  - web
+  - websecure
   routes:
   - match: Host(`prometheus.ajphome.com`)
     kind: Rule
     services:
     - name: kube-prometheus-stack-prometheus
       port: 9090
+  tls:
+    secretName: prometheus-tls
