feat: add TLS for prometheus pt 3

--- a/monitoring/kustomization.yaml
+++ b/monitoring/kustomization.yaml
@@ -3,4 +3,5 @@ kind: Kustomization
 resources:
 - grafana-tls.Certificate.yaml
 - grafana.ingressroute.yaml
+- prometheus-tls.Certificate.yaml
 - prometheus.ingressroute.yaml
