--- a/k0s/k0s.Cluster.patch.yaml
+++ b/k0s/k0s.Cluster.patch.yaml
@@ -79,3 +79,25 @@ spec:
               values: |
                 alertmanager:
                   enabled: false
+                grafana:
+                  persistence:
+                    enabled: true
+                    type: sts
+                    storageClassName: "openebs-hostpath"
+                    accessModes:
+                    - ReadWriteOnce
+                    size: 20Gi
+                    finalizers:
+                    - kubernetes.io/pvc-protection
+                prometheus:
+                  prometheusSpec:
+                    storageSpec:
+                      volumeClaimTemplate:
+                        spec:
+                          storageClassName: "openebs-hostpath"
+                          accessModes:
+                          - ReadWriteOnce
+                          resources:
+                            requests:
+                              storage: 50Gi
+                        selector: {}
