--- a/ansible/roles/common/tasks/coreos.yaml
+++ b/ansible/roles/common/tasks/coreos.yaml
@@ -6,3 +6,20 @@
     state: present
   notify:
   - Reboot Node
+- name: Ensure configuration files
+  become: true
+  ansible.builtin.copy:
+    src:  '{{ item.src }}'
+    dest: '{{ item.dest }}'
+    mode: '{{ item.mode }}'
+    state: present
+  loop:
+    - src: "{{ overlaysDir }}/coreos/etc/zincati/config.d/51-rollout-wariness.toml"
+      dest: /etc/zincati/config.d/51-rollout-wariness.toml
+      mode: 544
+    - src: "{{ overlaysDir }}/coreos/etc/zincati/config.d/55-updates-strategy.toml"
+      dest: /etc/zincati/config.d/55-updates-strategy.toml
+      mode: 544
+    - src: "{{ overlaysDir }}/coreos/etc/sudoers.d/01_wheel"
+      dest: /etc/sudoers.d/01_wheel
+      mode: 440
