--- a/.mise.toml
+++ b/.mise.toml
@@ -5,6 +5,8 @@ k0sctl = "0.17.7"
 "cargo:coreos-installer" = "latest"
 pre-commit = "latest"
 kubectl = "latest"
+"pipx:pykickstart" = "latest"
+"npm:mustache" = "latest"
 
 [env]
 CONTAINER_ENGINE="docker"
@@ -29,8 +31,15 @@ COREOS_DOWNLOAD_URL="https://builds.coreos.fedoraproject.org/prod/streams/stable
 COREOS_KERNEL_URL="{{ env.COREOS_DOWNLOAD_URL }}/fedora-coreos-{{ env.COREOS_VERSION }}-live-kernel-{{ env.TARGET_SYSTEM_ARCH }}"
 COREOS_INITRAMFS_URL="{{ env.COREOS_DOWNLOAD_URL }}/fedora-coreos-{{ env.COREOS_VERSION }}-live-initramfs.{{ env.TARGET_SYSTEM_ARCH }}.img"
 COREOS_ROOTFS_URL="{{ env.COREOS_DOWNLOAD_URL }}/fedora-coreos-{{ env.COREOS_VERSION }}-live-rootfs.{{ env.TARGET_SYSTEM_ARCH }}.img"
+FEDORA_VERSION="40"
+FEDORA_DOWNLOAD_URL="https://download.fedoraproject.org/pub/fedora/linux/releases/{{ env.FEDORA_VERSION }}/Server/x86_64/os/images/pxeboot"
+FEDORA_KERNEL_URL="{{ env.FEDORA_DOWNLOAD_URL }}/vmlinuz"
+FEDORA_INITRD_URL="{{ env.FEDORA_DOWNLOAD_URL }}/initrd.img"
 PXE_ROOT_DIR="{{ [env.DATA_DIR, 'os'] | join_path }}"
 PXE_COREOS_DIR="{{ [env.PXE_ROOT_DIR, 'fedora', 'coreos', env.COREOS_VERSION, env.TARGET_SYSTEM_ARCH] | join_path }}"
+PXE_FEDORA_DIR="{{ [env.PXE_ROOT_DIR, 'fedora', 'server', env.FEDORA_VERSION, env.TARGET_SYSTEM_ARCH] | join_path }}"
+FEDORA_KERNEL_OUTPUT="{{ [env.PXE_FEDORA_DIR, 'vmlinuz'] | join_path }}"
+FEDORA_INITRD_OUTPUT="{{ [env.PXE_FEDORA_DIR, 'initrd.img'] | join_path }}"
 K0S_KERNEL_OUTPUT="{{ [env.PXE_COREOS_DIR, 'k0s-live-kernel'] | join_path }}"
 K0S_INITRAMFS_OUTPUT="{{ [env.PXE_COREOS_DIR, 'k0s-live-initramfs.img'] | join_path }}"
 K0S_ROOTFS_OUTPUT="{{ [env.PXE_COREOS_DIR, 'k0s-live-rootfs.img'] | join_path }}"
@@ -38,6 +47,7 @@ PXE_IGNITION_PATH="{{ [env.CACHE_DIR, 'ignition', 'pxe.ign'] | join_path }}"
 PXE_BUTANE_PATH="{{ [config_root, 'ignition', 'pxe.bu'] | join_path }}"
 PXE_ARM_INSTALL_RELEASE="40"
 PXE_ARM_INSTALL_DEVICE="/dev/sda"
+LABADM_PASSWD=""
 
 [tasks."k0s:trust-ca"]
 run = """
@@ -85,7 +95,7 @@ run = """
 
 [tasks."apply:pxe"]
 run="scp -i ${K0SCTL_IDENTITY_PATH} -Cr ${PXE_ROOT_DIR} ${K0SCTL_USERNAME}@pxe:/srv/www"
-depends = [ "k0s:generate:pxe" ]
+depends = [ "k0s:generate:pxe", "hypervisor:generate:pxe" ]
 
 [tasks."k0s:generate:pxe"]
 run = """
@@ -114,6 +124,25 @@ run = """
     rm temp.initramfs
     """
 depends = ["k0s:generate:ignition"]
+
+[tasks."hypervisor:generate:pxe"]
+run = """
+    mkdir -p "${PXE_FEDORA_DIR}"
+
+    mustache - "${root}/kickstart/hypervisor.mustache" "${PXE_FEDORA_DIR}/hypervisor.ks" << EOF
+    {
+        "install_device": "/dev/nvme0n1",
+        "labadm_key": "$(/usr/bin/cat ${K0SCTL_IDENTITY_PATH}.pub)",
+        "labadm_passwd": "${LABADM_PASSWD}"
+    }
+EOF
+
+    ksvalidator "${PXE_FEDORA_DIR}/hypervisor.ks"
+
+    echo "${FEDORA_KERNEL_URL}"
+    curl -L -o "${FEDORA_KERNEL_OUTPUT}" "${FEDORA_KERNEL_URL}"
+    curl -L -o "${FEDORA_INITRD_OUTPUT}" "${FEDORA_INITRD_URL}"
+"""
 
 [tasks."pxe:arm:install"]
 run = """
