feat: leverage flux and external-dns

--- a/flux/kustomization.yaml
+++ b/flux/kustomization.yaml
@@ -6,3 +6,20 @@ resources:
 - metallb.kustomization.yaml
 - monitoring.kustomization.yaml
 - cert-manager.kustomization.yaml
+- openebs.helmrepository.yaml
+- openebs.helmrelease.yaml
+- metallb.helmrepository.yaml
+- metallb.helmrelease.yaml
+- jetstack.helmrepository.yaml
+- cert-manager.helmrelease.yaml
+- nfd.helmrepository.yaml
+- node-feature-discovery.helmrelease.yaml
+- intel.helmrepository.yaml
+- intel-device-plugins-operator.helmrelease.yaml
+- intel-device-plugins-gpu.helmrelease.yaml
+- traefik.helmrepository.yaml
+- traefik.helmrelease.yaml
+- prometheus-community.helmrepository.yaml
+- kube-prometheus-stack.helmrelease.yaml
+- bitnami.helmrepository.yaml
+- external-dns.helmrelease.yaml
