--- a/monitoring/kustomization.yaml
+++ b/monitoring/kustomization.yaml
@@ -2,6 +2,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - grafana-tls.Certificate.yaml
-- grafana.ingressroute.yaml
+- grafana.ingress.yaml
 - prometheus-tls.Certificate.yaml
-- prometheus.ingressroute.yaml
+- prometheus.ingress.yaml
