--- a/monitoring/prometheus.ingress.yaml
+++ b/monitoring/prometheus.ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: grafana
+  name: prometheus
   annotations:
     external-dns.alpha.kubernetes.io/hostname: prometheus.ajphome.com.
 spec:
