fix: drop TLD from monitoring ingress TLS hosts

--- a/monitoring/prometheus.ingress.yaml
+++ b/monitoring/prometheus.ingress.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   tls:
   - hosts:
-    - prometheus.ajphome.com.
+    - prometheus.ajphome.com
     secretName: prometheus-tls
   rules:
   - host: prometheus.ajphome.com
