--- a/monitoring/grafana.ingress.yaml
+++ b/monitoring/grafana.ingress.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   tls:
   - hosts:
-    - grafana.ajphome.com.
+    - grafana.ajphome.com
     secretName: grafana-tls
   rules:
   - host: grafana.ajphome.com
