--- a/flux/traefik.helmrelease.yaml
+++ b/flux/traefik.helmrelease.yaml
@@ -14,3 +14,8 @@ spec:
         kind: HelmRepository
         name: traefik
   interval: 10m0s
+  values:
+    providers:
+      kubernetesIngress:
+        publishedService:
+          enabled: true
