--- a/monitoring/grafana.ingress.yaml
+++ b/monitoring/grafana.ingress.yaml
@@ -2,6 +2,8 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: grafana
+  annotations:
+    dns.alpha.kubernetes.io/ingress-hostname-source: defined-hosts-only
 spec:
   tls:
   - hosts:
