--- a/flux/external-dns.helmrelease.yaml
+++ b/flux/external-dns.helmrelease.yaml
@@ -25,6 +25,7 @@ spec:
     sources:
     - pod
     - service
+    - ingress
     sidecars:
     - name: opnsense-unbound-external-dns-webhook
       image: ghcr.io/jobs62/opnsense_unbound_external-dns_webhook:v0.2.0-rc1
