--- a/monitoring/prometheus-tls.Certificate.yaml
+++ b/monitoring/prometheus-tls.Certificate.yaml
@@ -3,6 +3,13 @@ kind: Certificate
 metadata:
   name: prometheus-tls
 spec:
+  duration: 2160h # 90d
+  renewBefore: 360h # 15d
+  subject:
+    organizations:
+      - AJP
+  commonName: prometheus.ajphome.com
+  isCA: false
   dnsNames:
   - prometheus.ajphome.com
   secretName: prometheus-tls
