--- a/.mise.toml
+++ b/.mise.toml
@@ -43,6 +43,7 @@ run = """
     mkdir -p $(dirname ${K0SCTL_KUBECONFIG})
     k0sctl kubeconfig -c ${K0SCTL_CONFIG_OUTPUT} > ${K0SCTL_KUBECONFIG}
     """
+depends = ["generate:config"]
 
 [tasks."flux:apply"]
 run = "kubectl apply -k flux"
