--- a/flux/openebs.helmrepository.yaml
+++ b/flux/openebs.helmrepository.yaml
@@ -4,4 +4,4 @@ metadata:
   name: openebs
 spec:
   interval: 24h0m0s
-  url: https://openebs.github.io/charts
+  url: https://openebs.github.io/openebs
