--- a/flux/external-dns.helmrelease.yaml
+++ b/flux/external-dns.helmrelease.yaml
@@ -28,7 +28,7 @@ spec:
     - ingress
     sidecars:
     - name: opnsense-unbound-external-dns-webhook
-      image: ghcr.io/jobs62/opnsense_unbound_external-dns_webhook:v0.2.0-rc1
+      image: ghcr.io/jobs62/opnsense_unbound_external-dns_webhook:v0.4.0
       ports:
       - containerPort: 8800
         name: http
