--- a/k0s/kustomization.yaml
+++ b/k0s/kustomization.yaml
@@ -4,3 +4,27 @@ resources:
 - k0s.Cluster.yaml
 patches:
 - path: k0s.Cluster.patch.yaml
+- target:
+    group: k0sctl.k0sproject.io
+    version: v1beta1
+    kind: Cluster
+    name: services
+  patch: |-
+    - op: replace
+      path: /spec/hosts/0/role
+      value: controller+worker
+    - op: replace
+      path: /spec/hosts/0/noTaints
+      value: true
+    - op: replace
+      path: /spec/hosts/1/role
+      value: controller+worker
+    - op: replace
+      path: /spec/hosts/1/noTaints
+      value: true
+    - op: replace
+      path: /spec/hosts/2/role
+      value: controller+worker
+    - op: replace
+      path: /spec/hosts/2/noTaints
+      value: true
